<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:gravity="center"
        android:background="@drawable/search_result_item_bg">

        <TextView
            android:id="@+id/search_result_item_name"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="search result" />

        <Button
            android:id="@+id/add_btn"
            android:onClick="onAddButtonClick"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Add" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>