...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <Button
            android:id="@+id/start_button"
            android:layout_width="386dp"
            android:layout_height="58dp"
            android:layout_marginHorizontal="22dp"
            android:text="Begin Route"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
