...
                    android:text="Skip"
                    android:textSize="11dp"
                    android:layout_marginHorizontal="22dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <Button
                    android:id="@+id/route_next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Next"
                    android:textSize="11dp"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
...
